Adicionado arquivo para ver objetivos, e funcionando funcionalidade de criacoes dos botoes dinamicamente

--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -25,5 +25,5 @@
     </div>
 
 </body>
-    <script type="text/javascript" src="jsTestes.js"></script>
+    <script type="text/javascript" src="../../../public/jsTestes.js"></script>
 </html>
